--- a/TestAll.java.html
+++ b/TestAll.java.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../../../.resources/report.css" type="text/css"/><link rel="shortcut icon" href="../../../.resources/report.gif" type="image/gif"/><title>TestAll.java</title><link rel="stylesheet" href="../../../.resources/prettify.css" type="text/css"/><script type="text/javascript" src="../../../.resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../../../.sessions.html" class="el_session">Sessions</a></span><a href="../../../index.html" class="el_report">VendingMachineTest (Apr 10, 2016 2:20:08 PM)</a> &gt; <a href="../../index.html" class="el_group">VendingMachineTest</a> &gt; <a href="../index.html" class="el_bundle">src</a> &gt; <a href="index.source.html" class="el_package">edu.towson.cis.cosc603.project4.vendingmachine</a> &gt; <span class="el_source">TestAll.java</span></div><h1>TestAll.java</h1><pre class="source lang-java linenums">package edu.towson.cis.cosc603.project4.vendingmachine;
+<?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/><link rel="stylesheet" href="../../../.resources/report.css" type="text/css"/><link rel="shortcut icon" href="../../../.resources/report.gif" type="image/gif"/><title>TestAll.java</title><link rel="stylesheet" href="../../../.resources/prettify.css" type="text/css"/><script type="text/javascript" src="../../../.resources/prettify.js"></script></head><body onload="window['PR_TAB_WIDTH']=4;prettyPrint()"><div class="breadcrumb" id="breadcrumb"><span class="info"><a href="../../../.sessions.html" class="el_session">Sessions</a></span><a href="../../../index.html" class="el_report">VendingMachineTest (Apr 10, 2016 2:42:39 PM)</a> &gt; <a href="../../index.html" class="el_group">VendingMachineTest</a> &gt; <a href="../index.html" class="el_bundle">src</a> &gt; <a href="index.source.html" class="el_package">edu.towson.cis.cosc603.project4</a> &gt; <span class="el_source">TestAll.java</span></div><h1>TestAll.java</h1><pre class="source lang-java linenums">package edu.towson.cis.cosc603.project4;
 
 import org.junit.runner.JUnitCore;
 import org.junit.runner.RunWith;
@@ -15,11 +15,9 @@ import org.junit.runners.Suite;
  */
 @RunWith(Suite.class)
 @Suite.SuiteClasses({
-	VendingMachineItemTest.class,
-	VendingMachineExceptionTest.class,
-	VendingMachineTest.class,
+	edu.towson.cis.cosc603.project4.vendingmachine.TestAll.class,
 })
-<span class="nc" id="L22">public class TestAll {</span>
+<span class="nc" id="L20">public class TestAll {</span>
 
 	/**
 	 * Launch the test.
@@ -29,7 +27,7 @@ import org.junit.runners.Suite;
 	 * @generatedBy CodePro at 4/10/16 2:11 PM
 	 */
 	public static void main(String[] args) {
-<span class="nc" id="L32">		JUnitCore.runClasses(new Class[] { TestAll.class });</span>
-<span class="nc" id="L33">	}</span>
+<span class="nc" id="L30">		JUnitCore.runClasses(new Class[] { TestAll.class });</span>
+<span class="nc" id="L31">	}</span>
 }
-</pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.6.201602180812</span>VendingMachineTest (Apr 10, 2016 2:20:08 PM)</div></body></html>
+</pre><div class="footer"><span class="right">Created with <a href="http://www.eclemma.org/jacoco">JaCoCo</a> 0.7.6.201602180812</span>VendingMachineTest (Apr 10, 2016 2:42:39 PM)</div></body></html>
